# divisione-due-cifre

./: .gitignore  DivisioneDueCifre.cabal  LICENSE  README.md
src/: DivisioneDueCifre.hs  Main.hs
