name:                DivisioneDueCifre
version:             0.1.0.0
cabal-version:       >=1.10
build-type:          Simple
license:             BSD3
license-file:        LICENSE
copyright:           © 2013 Mauro Taraborelli
author:              Mauro Taraborelli
maintainer:          maurotaraborelli@gmail.com
stability:           experimental
homepage:            https://github.com/maurotrb/divisione-due-cifre
bug-reports:         https://github.com/maurotrb/divisione-due-cifre/issues
synopsis:            Algoritmo per la divisione a due cifre
description:
    Algoritmo per la divisione a due cifre.
category:            Math
extra-source-files:
    README.md

executable ddc
  hs-source-dirs:   src
  main-is:          Main.hs
  build-depends:
      base ==4.*
    , optparse-applicative ==0.7.*
  default-language:    Haskell2010
  ghc-options: -Wall

source-repository head
  type:     git
  location: https://github.com/maurotrb/divisione-due-cifre.git

source-repository head
  type:     git
  location: https://maurotrb@bitbucket.org/maurotrb/divisione-due-cifre.git
